# neumes-playground

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
backend/: .dockerignore  Dockerfile  README.md  neume_classes.yaml  pyproject.toml
backend/contributions/03c5e1ab-1f70-4a80-9153-648d0f345e22/: annotations.json  annotations.mei
backend/contributions/04425401-4f50-4cdc-af66-acbd761a1a89/: annotations.json  annotations.mei
backend/contributions/3765c32f-c118-4b09-b451-4514d26a5b1e/: annotations.json  annotations.mei
backend/contributions/5075f9a5-0107-4825-8274-7920e93675e1/: annotations.json  annotations.json.bak  annotations.mei
backend/contributions/60e79424-5217-47ca-adaf-67e12e311357/: annotations.json  annotations.mei
backend/contributions/6ab73c1b-05fa-4e25-a2d0-7a005c357cd9/: annotations.json  annotations.json.bak  annotations.mei
backend/contributions/7498d242-801b-490f-a855-a997d0ada6eb/: annotations.json  annotations.mei
backend/contributions/c1b483ff-f9eb-42aa-bfdf-9cb2975cb093/: annotations.json  annotations.mei
backend/contributions/c79e14ac-baf4-40fd-8be4-54e9070ee355/: annotations.json  annotations.json.bak  (+1 more)
backend/scripts/: evaluate_segmentation.py  migrate_json_to_mei.py  restore_contributions.py  train_segmentation.py
backend/tests/: test_api_cors.py  test_contribution.py  test_mei_io.py  test_neume_detection.py  test_neume_registry.py  test_polygon_slicing.py  test_segmentation.py  test_sse_progress.py  test_text_masking.py  test_tiling.py  test_yolo_export.py  test_yolo_trainer.py
(+920 files in other folders)
